corrected footer on blog / put window image back to overflow

--- a/style/sass/partials/_media-queries.scss
+++ b/style/sass/partials/_media-queries.scss
@@ -95,10 +95,10 @@
       top: 500px;
     } 
 
-  .blog-footer {
-      position: relative;
-      top: 500px;
-    }
+.blog-footer {
+  position: relative;
+  top: 500px;
+}
 
 //CONTACT FORM
 .contact-form {
@@ -190,7 +190,7 @@ main {
 
 .blog-footer {
   position: relative;
-  top: 0px;
+  top: 500px;
 }
 
 
