--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -207,9 +207,13 @@ h6 {
   border-radius: 50%;
 }
 
+.window-image-container {
+  width: 105%;
+}
 
 .window-image {
-  width: 100%;
+  width: 102%;
+  margin: 30px 0 30px -20px;
 }
 
 .founder-section {
